<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.ListaAnimalActivity">

    <TextView
        android:id="@+id/textViewAnimal"
        style="@style/TextViewTituloLista"
        android:text="@string/texto_animal" />

    <ListView
        android:id="@+id/listaAnimal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/buttonRetAnimal"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_padrao_retornar" />

    <Button
        android:id="@+id/buttonAtualAnimal"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_atualizar_bd" />

    <Button
        android:id="@+id/buttonDigitarNome"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_dig_nome" />

</LinearLayout>