<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.DataActivity">

    <TextView
        android:id="@+id/textViewPadrao"
        style="@style/TextView"
        android:text="@string/texto_data" />

    <Button
        android:id="@+id/editTextData"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="JAN 01 2020"
        android:textSize="30sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="10dp"
        android:onClick="openDatePicker" />


    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCancData"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/texto_padrao_cancelar" />

        <Button
            android:id="@+id/buttonSalvarData"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/texto_padrao_salvar" />

    </LinearLayout>

</LinearLayout>